--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="Mostaqeem Logo" class="logo">
+        <img src="images/logo.svg" alt="Mostaqeem Logo" class="logo">
         <h1>Privacy Policy</h1>
         <p>Last Updated: 15/3/2025</p>
     </header>
