--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             color: #333;
         }
         header {
-            background-color: #0073e6;
+            background-color: #ffffff;
             color: white;
             text-align: center;
             padding: 20px;
