--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         h1, h2, h3 {
-            color: #0073e6;
+            color: #282323;
         }
         section {
             margin-bottom: 20px;
