--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
             padding: 20px;
         }
         main {
-            max-width: 800px;
+            max-width: 1200px; /* Increased width */
+            width: 90%; /* Ensures it scales well on different screens */
             margin: 20px auto;
             background: white;
-            padding: 20px;
+            padding: 30px; /* Slightly increased padding for better spacing */
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1); /* Slightly enhanced shadow for a more modern look */
         }
+        
         h1, h2, h3 {
             color: #282323;
         }
