--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         }
         
         h1, h2, h3 {
-            color: #282323;
+            color: #041E49;
         }
         section {
             margin-bottom: 20px;
