--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
     <header>
-        <img src="images/mostaqeem logo.svg" alt="Mostaqeem Logo" class="logo">
+        <img src="images/Vector (2).svg" alt="Mostaqeem Logo" class="logo">
         <h1>Privacy Policy</h1>
         <p>Last Updated: 15/3/2025</p>
     </header>
