--- a/index.html
+++ b/index.html
@@ -1,51 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy</title>
-    <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-            color: #333;
-        }
-        header {
-            background-color: #ffffff;
-            color: white;
-            text-align: center;
-            padding: 20px;
-        }
-        main {
-            max-width: 1200px; /* Increased width */
-            width: 90%; /* Ensures it scales well on different screens */
-            margin: 20px auto;
-            background: white;
-            padding: 30px; /* Slightly increased padding for better spacing */
-            border-radius: 8px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1); /* Slightly enhanced shadow for a more modern look */
-        }
-        
-        h1, h2, h3 {
-            color: #041E49;
-        }
-        section {
-            margin-bottom: 20px;
-        }
-        ul {
-            padding-left: 20px;
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background: #0073e6;
-            color: white;
-            margin-top: 20px;
-        }
-    </style>
+<header>
+    <img src="images/Vector (2).svg" alt="Mostaqeem Logo" class="logo">
+    <h1>Privacy Policy</h1>
+    <p>Last Updated: 15/3/2025</p>
+</header>
+
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f9f9f9;
+        color: #333;
+    }
+    header {
+        background-color: #ffffff;
+        padding: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+    .logo {
+        height: 50px;
+        position: absolute;
+        left: 20px;
+    }
+    main {
+        max-width: 1200px;
+        width: 90%;
+        margin: 20px auto;
+        background: white;
+        padding: 30px;
+        border-radius: 8px;
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    }
+    h1, h2, h3 {
+        color: #041E49;
+    }
+    section {
+        margin-bottom: 20px;
+    }
+    ul {
+        padding-left: 20px;
+    }
+    footer {
+        text-align: center;
+        padding: 10px;
+        background: #0073e6;
+        color: white;
+        margin-top: 20px;
+    }
+</style>
+
 </head>
 <body>
     <header>
