--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <header>
     <img src="images/Vector (2).svg" alt="Mostaqeem Logo" class="logo">
-    <h1>Privacy Policy</h1>
-    <p>Last Updated: 15/3/2025</p>
+    <div class="title-container">
+        <h1>Privacy Policy</h1>
+        <p class="date">Last Updated: 15/3/2025</p>
+    </div>
 </header>
 
 <style>
@@ -57,11 +59,7 @@
 
 </head>
 <body>
-    <header>
-        <img src="images/Vector (2).svg" alt="Mostaqeem Logo" class="logo">
-        <h1>Privacy Policy</h1>
-        <p>Last Updated: 15/3/2025</p>
-    </header>
+    
     <main>
         <section>
             <h2>1. Introduction</h2>
