--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <section>
             <h2>12. Contact Us</h2>
             <p>If you have any questions, concerns, or requests regarding this Privacy Policy, you can contact us at:</p>
-            <p>Email: [Your Contact Email]</p>
+            <p>Email: <a href="mailto:mostaqeemapp@gmail.com">mostaqeemapp@gmail.com</a></p>
             <p>We are committed to responding to inquiries in a timely manner and ensuring transparency in our data collection and privacy practices.</p>
         </section>
     </main>
