--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     
     <main>
         <section>
-            <p>Welcome to Mostaqeem’s Privacy Policy. We are committed to protecting your privacy and ensuring that your personal data is handled in a safe and responsible manner. This Privacy Policy outlines the types of information we collect, how we use it, whom we share it with, and the measures we take to keep it secure.</p>
+            <p>Welcome to Rafiqy’s Privacy Policy. We are committed to protecting your privacy and ensuring that your personal data is handled in a safe and responsible manner. This Privacy Policy outlines the types of information we collect, how we use it, whom we share it with, and the measures we take to keep it secure.</p>
             <p>By using our mobile application (the “Service”), you consent to the collection and use of your data as described in this Privacy Policy. If you do not agree with any part of this policy, please discontinue using our Service immediately.</p>
         </section>
         <section>
@@ -145,7 +145,7 @@
         <section>
             <h2>11. Contact Us</h2>
             <p>If you have any questions, concerns, or requests regarding this Privacy Policy, you can contact us at:</p>
-            <p>Email: <a href="mailto:mostaqeemapp@gmail.com">mostaqeemapp@gmail.com</a></p>
+            <p>Email: <a href="mailto:info@rafiqyapp.com">info@rafiqyapp.com</a></p>
             <p>We are committed to responding to inquiries in a timely manner and ensuring transparency in our data collection and privacy practices.</p>
         </section>
     </main>
