--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <header>
-    <img src="images/mostaqeem logo.svg" alt="Mostaqeem Logo" class="logo">
+    <img src="images/green face.svg" alt="Rafiqy Logo" class="logo">
     <div class="title-container">
         <h1>Privacy Policy</h1>
         <p class="date">Last Updated: 15/3/2025</p>
